src/passes/snapshots/lumina2__passes__cst_gen__test__ty__tuple_empty.snap
---
source: src/passes/cst_gen.rs
expression: ()
---
Tuple(
    Tuple {
        tok_l_parenthesis: LParenthesis,
        items: PunctuatedList {
            items: [],
            punctuation: [],
        },
        tok_r_parenthesis: RParenthesis,
    },
)
