src/passes/snapshots/lumina2__passes__cst_gen__test__ty__tuple_many.snap
---
source: src/passes/cst_gen.rs
expression: "(i8, bool, u8)"
---
Tuple(
    Tuple {
        tok_l_parenthesis: LParenthesis,
        items: PunctuatedList {
            items: [
                Named(
                    Ident(
                        "i8",
                    ),
                ),
                Named(
                    Ident(
                        "bool",
                    ),
                ),
                Named(
                    Ident(
                        "u8",
                    ),
                ),
            ],
            punctuation: [
                Comma,
                Comma,
            ],
        },
        tok_r_parenthesis: RParenthesis,
    },
)
